# locobot_minimal

./: README.md  install_locobot_minimal.sh  locobot_minimal.rosinstall
locobot_bringup/: CMakeLists.txt  package.xml
locobot_bringup/launch/: all.launch  desktop.launch  old_all.launch  test_dynamixel.launch  test_lds.launch
locobot_bringup/launch/include/: dynamixel.launch.xml  habitat_tf.launch.xml  mobile_base.launch.xml  sensors.launch.xml
locobot_bringup/launch/includes/: mobile_base.launch.xml  move_base.launch.xml
locobot_bringup/param/: amcl.yaml  cmd_vel_mux.yaml  dynamixel.yaml  dynamixel_info.yaml  global_costmap.yaml  global_planner.yaml  gmapping.yaml  laser_filter.yaml  local_costmap.yaml  move_base.yaml  mux.yaml  navfn_global_planner.yaml  navi.rviz  smoother.yaml
locobot_bringup/rviz/: habitat_nav.rviz
locobot_bringup/scripts/: scale_cmd_vel.py
locobot_control/: CMakeLists.txt  package.xml
locobot_control/launch/: controllers.launch
locobot_control/param/: controllers.yaml
locobot_description/: package.xml
locobot_description/launch/: simulate.launch  view_model.launch
locobot_description/meshes/: main_struct_simple.STL  scan_struct.STL
locobot_description/param/: view_model.rviz
locobot_description/urdf/: camera_head.urdf.xacro  lds.urdf.xacro  locobot.gazebo.xacro  locobot.urdf.xacro  locobot_gazebo.urdf.xacro
locobot_hardware_interface/: CMakeLists.txt  package.xml
locobot_hardware_interface/include/locobot_hardware_interface/: locobot_hardware_interface.h
locobot_hardware_interface/launch/: test.launch
locobot_hardware_interface/src/: locobot_controller_manager.cpp  locobot_hardware_interface.cpp
locobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
locobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  locobot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
locobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  locobot_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
locobot_navigation/: CMakeLists.txt  package.xml
locobot_navigation/launch/: test.launch
locobot_navigation/launch/include/: map_from_habitat.launch.xml  nav_stack.launch.xml
locobot_navigation/param/: costmap_common.yaml  dwa_local_planner.yaml  mapper_params_localization.yaml  mapper_params_online_sync.yaml  nav_stack.yaml
locobot_with_lds_description/: CMakeLists.txt  package.xml
locobot_with_lds_description/urdf/: locobot_with_lds.urdf
