<?xml version="1.0"?>
<package format="2">
  <name>locobot_bringup</name>
  <version>0.0.0</version>
  <description>The locobot_bringup package</description>
  <maintainer email="wgw@todo.todo">wgw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>

  <exec_depend>locobot_description</exec_depend>
  <exec_depend>locobot_navigation</exec_depend>
  <!-- <exec_depend>locobot_moveit_config</exec_depend> -->

  <export>

  </export>
</package>
