<?xml version="1.0"?>
<package format="2">
  <name>locobot_description</name>
  <version>0.0.0</version>
  <description>The locobot_description package</description>
  <maintainer email="wgw@todo.todo">wgw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>interbotix_xsarm_descriptions</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>

  </export>
</package>
