<?xml version="1.0"?>
<package format="2">
  <name>locobot_navigation</name>
  <version>0.0.0</version>
  <description>The locobot_navigation package</description>
  <maintainer email="wgw@todo.todo">wgw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>

  </export>
</package>
